--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,10 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1, h2, h3 {
   font-weight: 400;
 }
