--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,10 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3{
     font-weight: 400;
 }
