--- a/sass/main.scss
+++ b/sass/main.scss
@@ -58,7 +58,14 @@ h1, h2, h3{
     text-align: center;
     &__text{
         text-align: center;
-        margin: 2rem;
+        margin-top: 2rem;
+    }
+
+    &__para{
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        font-size: 1rem;
     }
 
     .btn{
