--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,3 +10,24 @@ $secondary-color: #d3d3d3;
 @mixin transition-ease{
     transition: all 0.5s ease-in-out;
 }
+
+@mixin media-sm {
+    @media screen and (max-width: 768px) {
+      @content;
+    }
+  }
+  @mixin media-md {
+    @media screen and (min-width: 768px) {
+      @content;
+    }
+  }
+  @mixin media-lg {
+    @media screen and (min-width: 1024px) {
+      @content;
+    }
+  }
+  @mixin media-xl {
+    @media screen and (min-width: 1600px) {
+      @content;
+    }
+  }
